--- a/src/initial_guess/CMakeLists.txt
+++ b/src/initial_guess/CMakeLists.txt
@@ -2,8 +2,9 @@ target_sources(mrchem
   PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}/chk.cpp
     ${CMAKE_CURRENT_LIST_DIR}/core.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/cube.cpp
     ${CMAKE_CURRENT_LIST_DIR}/gto.cpp
     ${CMAKE_CURRENT_LIST_DIR}/mw.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/random.cpp
     ${CMAKE_CURRENT_LIST_DIR}/sad.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/cube.cpp
   )
