Read volumetric cube data from HDF5
This leads to much more compact data files, but is obviously still not
the optimal solution.

Tested for restricted HF. The reference numbers are updated wrt the
`h2_scf_cube` test: the values differ by roughly 10-3 between the two
tests, which I believe it's due to the better precision when reading
data from HDF5.

TODO:
* Test for unrestricted HF.
* Add the Python scripts to obtain the volumetric cube data in HDF5
format from VeloxChem.

--- a/python/template.yml
+++ b/python/template.yml
@@ -575,6 +575,11 @@ sections:
         default: cube_vectors/
         docstring: |
           Directory where cube vectors are stored for mrchem calculation.
+      - name: hdf5
+        type: str
+        default: initial_guess/guess.h5
+        docstring: |
+          File name for the HDF5 guess.
 
   - name: SCF
     docstring: |
@@ -646,7 +651,8 @@ sections:
         default: sad_gto
         predicates:
           - value.lower() in ['mw', 'chk', 'gto', 'core_sz', 'core_dz', 'core_tz',
-            'core_qz', 'sad_sz', 'sad_dz', 'sad_tz', 'sad_qz', 'sad_gto', 'cube']
+            'core_qz', 'sad_sz', 'sad_dz', 'sad_tz', 'sad_qz', 'sad_gto', 'cube',
+            'hdf5']
         docstring: |
           Type of initial guess for ground state orbitals.
           ``chk`` restarts a previous calculation which was dumped using the
@@ -663,6 +669,7 @@ sections:
           basis (SZ, DZ, TZ or QZ) using a Core or Superposition of Atomic
           Densities Hamiltonian, respectively.
           ``cube`` will start from orbitals saved in cubefiles from external calculations.
+          ``hdf5`` will start from orbital data saved in HDF5 format from a GTO calculation.
       - name: write_checkpoint
         type: bool
         default: false
