--- a/src/qmoperators/two_electron/CMakeLists.txt
+++ b/src/qmoperators/two_electron/CMakeLists.txt
@@ -10,4 +10,6 @@ target_sources(mrchem PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/XCPotentialD1.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/XCPotentialD2.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ReactionPotential.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ReactionPotentialD1.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ReactionPotentialD2.cpp
     )
